# point-frag

./: CMakeLists.txt  README.md
cmake/: FindGLUT.cmake  FindLuaJIT.cmake
share/: arabic_city_II.mtl  convert.lua  deferred.frag  deferred.vert  f000.mtl  font.fnt  plain.frag  plain.vert  splat.frag  splat.geom  splat.vert  texture.frag  texture.vert
share/Maps/: default.tga
share/lua/: init.lua
src/: CMakeLists.txt  rename.sh
src/app/: app.cpp  camera.cpp  camera.hpp  event.cpp  event.hpp  frame.cpp  frame.hpp  game.cpp  game_event.cpp  game_frame.cpp  game_frame.hpp  game_render.hpp  pointcloud.cpp  pointcloud.hpp  render.cpp  render.hpp  task_app.cpp  texture.cpp  texture.hpp
src/app/old_camera/: camera.cpp  camera.hpp
src/freeglut/: config.h  freeglut_ext.c  freeglut_internal.h  freeglut_main.c  freeglut_window.c
src/game/: camera.cpp  camera.hpp  game.cpp  game.hpp  game_event.cpp  game_event.hpp  game_frame.cpp  game_frame.hpp  game_render.cpp  game_render.hpp  main.cpp
src/image/: CMakeLists.txt  FindImageMagick.cmake  FindOpenEXR.cmake  exr.cpp  image.cpp  image.h  magick.cpp  pfm.cpp  ppm.cpp  stb_image.cpp  stb_image.hpp  stb_image_write.cpp  tga.cpp
src/image/squish/: colourblock.h  colourfit.h  config.h  singlecolourfit.cpp  squish.h
src/math/: bbox.hpp  col3.hpp  col3f_sse.hpp  distribution.cpp  distribution.hpp  math.hpp  matrix.hpp  permutation.hpp  quaternion.hpp  random.hpp  sample.hpp  vec.hpp
src/models/: obj.cpp  obj.hpp
src/physics/: CMakeLists.txt
src/physics/OPCODE/Ice/: IceAABB.cpp  IceContainer.cpp  IceHPoint.cpp  IceIndexedTriangle.cpp  IceMatrix3x3.cpp  IceMatrix4x4.cpp  IceOBB.cpp  IcePlane.cpp  IcePoint.cpp  IceRandom.cpp  IceRay.cpp  IceRevisitedRadix.cpp  IceSegment.cpp  IceTriangle.cpp  IceUtils.cpp
src/physics/ode/demo/: demo_boxstack.cpp
src/physics/ode/src/: config.h
src/renderer/: font.cpp  font.hpp  hiz.cpp  hiz.hpp  ogl.cpp  ogl.hpp  ogl110.hxx  ogl120.hxx  ogl150.hxx  ogl200.hxx  ogl300.hxx  ogl310.hxx  ogl320.hxx  renderer.cpp  renderer.hpp  renderer_context.cpp  renderer_context.hpp  renderer_display_list.cpp  renderer_display_list.hpp  renderer_displayable.hpp  renderer_driver.cpp  renderer_driver.hpp  renderer_frame.cpp  renderer_frame.hpp  renderer_obj.cpp  renderer_obj.hpp  renderer_object.cpp  renderer_object.hpp  renderer_segment.hpp  renderer_set.hpp  renderobj.cpp  renderobj.hpp  texture.cpp  texture.hpp
src/renderer/GL/: gl3.h  ogl100.hxx  ogl130.hxx  ogl300.hxx
src/rt/: bvh.cpp  bvh.hpp  bvh2.cpp  bvh2.hpp  bvh2_node.hpp  bvh2_traverser.cpp  bvh2_traverser.hpp  bvh_traverser.cpp  intersectable.hpp  intersecter.hpp  intersector.hpp  morton.cpp  morton.hxx  ray.hpp  ray_packet.cpp  ray_packet.hpp  rt_camera.cpp  rt_camera.hpp  rt_triangle.hpp
src/rtcore/: CMakeLists.txt  hit.hpp  ray.hpp  rtcore.cpp  rtcore.hpp  tags
src/rtcore/bvh2/: bvh2.cpp  bvh2.hpp  bvh2_builder.cpp  bvh2_builder.hpp  bvh2_builder_spatial.cpp  bvh2_builder_spatial.hpp  bvh2_to_bvh4.cpp  bvh2_to_bvh4.hpp  bvh2_traverser.cpp  bvh2_traverser.hpp
src/rtcore/bvh4/: bvh4.cpp  bvh4.hpp  bvh4_builder.cpp  bvh4_builder.hpp  bvh4_traverser.cpp  bvh4_traverser.hpp  tags  triangle4.hpp
src/rtcore/common/: build_range.hpp  builder.hpp  compute_bounds.cpp  compute_bounds.hpp  default.hpp  object_binning.cpp  object_binning.hpp  object_binning_parallel.cpp  object_binning_parallel.hpp  spatial_binning.cpp  spatial_binning.hpp  stack_item.hpp
src/simd/: avx.hpp  avxb.hpp  avxf.hpp  avxi.hpp  immintrin_emu.hpp  smmintrin_emu.hpp  sse.hpp  sse_swizzle.hpp  sse_vec.hpp  sseb.hpp  ssef.cpp  ssef.hpp  ssei.hpp
src/stl/: algorithm.hpp  alignment.hpp  allocator.cpp  allocator.hpp  basic_string.hpp  buffer_allocator.hpp  fixed_array.hpp  fixed_list.hpp  fixed_sorted_vector.hpp  fixed_substring.hpp  fixed_vector.hpp  functional.hpp  hash.hpp  hash_map.hpp  int_to_type.hpp  intrusive_list.cpp  intrusive_list.hpp  intrusive_slist.cpp  intrusive_slist.hpp  iterator.hpp  list.cpp  list.hpp  map.hpp  pair.hpp  radix_sorter.hpp  rb_tree.hpp  rde_string.hpp  rdestl.hpp  rdestl_common.hpp  set.hpp  simple_string_storage.hpp  slist.cpp  slist.hpp  sort.hpp  sorted_vector.hpp  sstream.hpp  stack.hpp  stack_allocator.hpp  string_utils.hpp  test.cpp  (+3 more)
src/sys/: alloc.cpp  alloc.hpp  array.hpp  array2d.hpp  atomic.hpp  barrier.hpp  command.cpp  command.hpp  condition.cpp  condition.hpp  console.cpp  console.hpp  constants.hpp  default_path.cpp  default_path.hpp  filename.cpp  filename.hpp  fixed_array.hpp  hash_map.hpp  input_control.cpp  input_control.hpp  intrinsics.hpp  library.cpp  library.hpp  list.hpp  logging.cpp  logging.hpp  map.hpp  mutex.cpp  mutex.hpp  platform.cpp  platform.hpp  ref.hpp  script.cpp  script.hpp  set.hpp  string.cpp  string.hpp  sysinfo.cpp  sysinfo.hpp  (+9 more)
src/test/: font.cpp  lua.cpp  rt.cpp  utest_lua.cpp
src/utest/: utest.cpp  utest.hpp  utest_console.cpp  utest_lua.cpp  utest_rt.cpp  utest_tasking.cpp
